k8s-manifests/frontend-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sales-frontend-cluster-ip
spec:
  type: ClusterIP
  selector:
    end: sales-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
